<resources>
    <string name="app_name">音乐环绕</string>
    <string name="copyRight">©2019 FkSoft Corporation. All rights reserved.</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="exitMessage">确定退出程序？</string>
    <string name="agree">确定</string>
    <string name="dis_agree">取消</string>
    <string name="set_title">设置</string>
    <string name="permission_read_storage">读取SD卡文件</string>
    <string name="playList">播放列表</string>
    <string name="server_config">服务器配置</string>
    <string name="server_status">仪表盘</string>
    <string name="setting">设置</string>
    <string name="nav_other">其他选项</string>
    <string name="server_status_1">服务器负载：0/16</string>
    <string name="server_status_2">服务器负载：%d/%d</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>
    <string name="connect_client">客户端模式</string>
    <string name="title_activity_settings">Settings</string>
    <string name="set_nav_back">侧边栏图片比例</string>
    <string name="set_nav_back_summary">设置侧边栏图片长宽比例，修复图片拉伸</string>
    <string name="set_nav_back_hint">请输入数字(double)</string>
    <string name="set_nav_back_dialog_title">侧边栏比例（宽度/高度）</string>
    <string name="server_autoRun">服务器自动启动</string>
    <string name="server_autoRun_summary">服务器在软件开启时自动启动</string>
    <string name="client_config">客户端管理</string>
    <string name="about">关于</string>
    <string name="playlist_songList">创建的歌单(0)</string>
    <string name="playlist_songList_1">创建的歌单(%d)</string>
    <string name="playlist_localSong">本地音乐(%d)</string>
    <string name="playlist_history">最近播放(%d)</string>
    <string name="playlist_like">我喜欢的(%d)</string>
    <string name="close_status">通知栏遮罩</string>
    <string name="close_status_summary">关闭通知栏的遮罩效果，修复通知栏显示异常的问题</string>
    <string name="seek_start">跳过启动引导(beta)</string>
    <string name="seek_start_summary">跳过软件的启动引导，直接进入首页(会闪屏)</string>
    <string name="MusicTitle">音乐名称</string>
    <string name="MusicMessage">歌手</string>
    <string name="close_navigation">导航栏遮罩</string>
    <string name="close_navigation_summary">关闭导航栏遮罩以处理底部显示异常的问题</string>
    <string name="listActivity_load_error">索引信息读取失败！</string>
    <string name="playlist_localSong_str">本地音乐</string>
    <string name="delete_song_list">删除此歌单</string>
    <string name="delete">删除</string>
    <string name="music_list_add_title">添加歌单</string>
    <string name="music_list_add_btn_1">添加</string>
    <string name="song_list_add_fail">添加失败,请检查名称！</string>
    <string name="cancel">取消</string>
    <string name="song_list_item_size">%d首歌曲</string>
    <string name="delete_song_list_message">是否删除 %s?这将永久移除！</string>
    <string name="no_song">未发现歌曲！</string>
    <string name="config_song_list">管理歌单</string>
    <string name="song_list_name">歌单名称：</string>
    <string name="song_list_image">歌单图片：</string>
    <string name="save">保存</string>
    <string name="save_fail">保存失败！请检查</string>
    <string name="bye">敬请期待...</string>
    <string-array name="permission_allow_name">
        <item>获取当前网络状态</item>
        <item>获取WIFI信息</item>
        <item>读取设备外部存储空间</item>
        <item>写入设备外部存储空间</item>
    </string-array>
</resources>
