<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
                  xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
            android:title="显示设置">

        <EditTextPreference
                android:title="@string/set_nav_back"
                android:dialogTitle="@string/set_nav_back_dialog_title"
                android:key="edit_text_preference"
                android:hint="@string/set_nav_back_hint"
                android:enabled="false"
                android:id="@+id/nav_proportion"
                android:summary="@string/set_nav_back_summary"
                android:singleLine="true"
                android:defaultValue="2.0"
                android:inputType="number"
                android:lines="1"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/server_config">

        <SwitchPreference
                android:defaultValue="false"
                android:title="@string/server_autoRun"
                android:summary="@string/server_autoRun_summary"
                android:key="server_autoRun"/>
    </PreferenceCategory>
</PreferenceScreen>
