<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item android:title="@string/playList"
                android:checked="true"
                android:id="@+id/nav_playList"
                android:icon="@mipmap/nav_play_list"/>

        <item android:title="@string/server_config"
                android:id="@+id/nav_config"
                android:icon="@mipmap/nav_config"/>

        <item android:title="@string/server_status"
                android:id="@+id/nav_status"
                android:icon="@mipmap/nav_status"/>
    </group>
    <item android:title="@string/nav_other">
        <menu>
            <item
                    android:id="@+id/nav_setting"
                    android:icon="@mipmap/nav_set"
                    android:title="@string/setting"/>
            <item
                    android:id="@+id/nav_exit"
                    android:icon="@mipmap/nav_exit"
                    android:title="@string/exit"/>
        </menu>
    </item>
</menu>